@@ -1,3 +1,7 @@
+Wed Jun 25 13:36:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/query.py: Add &, | and ^ operators for queries.
+
 Wed Jun 25 12:09:21 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/: Move implementation of Query() to a separate file, and
